# image_surfer

./: README.md  pyproject.toml
image_surfer/: main.py
image_surfer/models/: image_list_model.py  search_result_model.py
image_surfer/widgets/: main_window.py  preview_pane.py
image_surfer/workers/: image_loader.py  index_worker.py  search_worker.py
