[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "image-surfer"
version = "0.1.0"
description = "Image preview and search tool"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "open_clip_torch",
    "faiss-cpu>=1.10",
]

[project.scripts]
image-surfer = "image_surfer.main:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"